# gerenciador-de-chamados-curso-pratico

./: .gitignore  CLAUDE.md  app.py  chamados.db  cos2.py  cost.py  cost.txt  cost3.py  pyproject.toml
.claude/: primeiro-prompt.txt  settings.json
.claude/agents/: docstring-writer.md  gestor-fluxo-chamados.md  normalizador-whatsapp.md  readme-generator.md  security-reviewer.md  test-writer.md  triagem-bancos-praticos.md  triagem-modulos-praticos.md  triagem-simulados-praticos.md
.claude/hooks/: posttooluse-2.sh  pretooluse-1.sh  stop-3.sh
api/: chamados.py  config.py  relatorios.py  serializers.py  whatsapp.py
core/: fluxo.py  models.py  normalizer.py  repo.py  triagem.py  triagem_bancos.py  triagem_modulos.py  triagem_simulados.py
frontend/: detalhe.html  index.html  novo.html
frontend/static/: app.js  style.css
tests/integration/: conftest.py  test_api.py
tests/unit/: conftest.py  test_fluxo.py  test_models.py  test_normalizer.py  test_redacao.py  test_triagem.py
